2018-05-25:
- Fixed bug introduced in version 1.1.0 that caused the calculation of particle area
  density in the profile summary to not exclude holes from the total area.
2018-05-22:
- Fixed the "_csv_writer object has no 'close' attribute" bug, so csv files
  can now be saved again.
- file_io.read_file() again had started to trigger errors when encountering
  non-ASCII characters, probably since after the migration to Python 3. This
  has now been fixed, such that coordinate files are opened using
  OS/locale-specific encoding, with the 'surrogateescape' option to tolerate
  some decoding errors.
2018-05-15:
- Particles outside the simulation window can now be chosen to be excluded for
  interpoint distance calculations when using Monte Carlo simulations with
  simulation window other than 'Profile + shell' and provided simulated
  interpoint distances are also calculated. This allows for better comparison
  between interparticle distances and simulated interpoint distances.
- Processed coordinates, including adjusted PSDs and Monte Carlo simulated
  points, can now be saved to new output files for each profile.
- Removed option to choose which summary files to save.
2018-05-08:
- Fixed a bug that prevented use of PSD as Monte Carlo simulation window.
- PSD simulation window can now also be used without strict localization.
- Modified the __run_monte_carlo() function with respect to generation
  of simulated points and the testing of their localization in the 
  simulation window to make it clearer.
- Changed icon.
- Renamed some class names for succinctness: ProfileBorderData to ProfileBorder, 
  ClusterData to Cluster, ProfileData to Profile.
- Other minor changes.
2018-04-25:
- Now works with Python 3 instead of Python 2.
- Uses openpyxl instead of pyExcelerator, and generates .xlsx files instead of
  old-format .xls files.
- Code cleanup and other minor changes.
2016-05-16:
- Bug fix.
2015-04-19:
- Further code cleanup.
- Bug fixes.
2014-11-11: