@@ -1,3 +1,7 @@
+2018-05-30:
+- Fixed bug present since migration to Python 3 (due to altered behaviour of map())
+  that truncated interpoint distance columns in interpoint summary to the length of
+  the column with fewest rows (only of concern when random points were used).
 2018-05-25:
 - Fixed bug introduced in version 1.1.0 that caused the calculation of particle area
   density in the profile summary to not exclude holes from the total area.
@@ -22,7 +26,7 @@
 - Fixed a bug that prevented use of PSD as Monte Carlo simulation window.
 - PSD simulation window can now also be used without strict localization.
 - Modified the __run_monte_carlo() function with respect to generation
-  of simulated points and the testing of their localization in the 
+  of simulated points and the testing of their localization in the 1
   simulation window to make it clearer.
 - Changed icon.
 - Renamed some class names for succinctness: ProfileBorderData to ProfileBorder, 
